--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>My First git site!!</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit iusto, ipsa debitis fugiat magni minus tempora maiores veritatis perspiciatis porro? Suscipit illum sequi odio. Aspernatur dolorem quam officia consequuntur saepe!</p>
+    <section>
+        <h2>This is a second header baby!!!</h2>
+    </section>
 </body>
 </html>
