--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My First git site!!</h1>
@@ -14,6 +15,7 @@
         <a href="">Read More!</a>
         <ul>
             <li>ONE LIST ITEM</li>
+            <li>Hey a second list item</li>
         </ul>
     </section>
 </body>
