adding another li and styles

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li>ONE LIST ITEM</li>
             <li>Hey a second list item</li>
+            <li>Third place list item</li>
         </ul>
     </section>
 </body>
